--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
   <body>
   
       <div id="map"></div>
-   
+
+    <script src="airportList.js"></script>
     <script src="script.js"></script>
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC_goboEQ-2pDgXVWVQ4KJ0U9rDvBsVRPw&callback=initMap"
     async defer></script>
