--- a/index.html
+++ b/index.html
@@ -8,9 +8,12 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-  
-      <div id="map"></div>
-
+ 
+      <div id="map">
+        
+      </div>
+    <script src="svgImage.js"></script>
+    <script src="flightSector.js"></script>
     <script src="airportList.js"></script>
     <script src="script.js"></script>
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC_goboEQ-2pDgXVWVQ4KJ0U9rDvBsVRPw&callback=initMap"
