--- a/index.html
+++ b/index.html
@@ -2,34 +2,146 @@
 <html>
   <head>
     <title>Simple Map</title>
-    <meta name="viewport" content="initial-scale=1.0">
-    <meta charset="utf-8">
-    
-    <link rel="stylesheet" href="style.css">
+    <meta name="viewport" content="initial-scale=1.0" />
+    <meta charset="utf-8" />
+
+    <link rel="stylesheet" href="style.css" />
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+      integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
+      crossorigin="anonymous"
+    />
   </head>
   <body>
-    <div class = 'container'>
-      <div id = 'documentation'>
-        <p>Using AIP data, we have selected 2 adjacent sectors which you can see below. </p>
-        <p> Flights are randomly generated and they are crossing the sectors.</p>
-      </div>
-      <div id = 'team'></div>
-      <div id = 'flightno'>
-         <button class ="actionButt" id="hoverArea">HoverArea</button>
-         <button class ="actionButt" id="resetArea">Reset Map</button>
-         <button class ="actionButt" id="nightMode">Night Mode</button>
+    <div class="projectContainer">
+      <div id="map"></div>
+      <div id="table">
+        <div id="actionButtons">
+          <button class="actionButt btn btn-primary" id="hoverArea">HoverArea</button>
+          <button class="actionButt btn btn-primary" id="resetArea">Reset Map</button>
+          <button class="actionButt btn btn-primary" id="nightMode">Night Mode</button>
+        </div>
+        <p id="infotext">Number of flights in current sector:</p>
+        <p id="flightno">test</p>
+        <p>
+          <button
+            class="btn btn-primary"
+            type="button"
+            data-toggle="collapse"
+            data-target="#projectInfo"
+            aria-expanded="false"
+            aria-controls="projectInfo"
+          >
+            Press to see information about project task
+          </button>
+        </p>
+        <div class="collapse" id="projectInfo">
+          <div class="card card-body">
+            <p>Creative Subject #6 (CS#6). Traffic Counts</p>
+            <p>
+              Using data from an AIP, select an airspace (CTA) with at least two
+              adjacent sectors.
+            </p>
+            <p>Generate random flights crossing the sectors.</p>
+            <p>
+              Calculate the number of flights within the sectors at a given
+              moment in time
+            </p>
+            <p>Assume horizontal flights.</p>
+          </div>
+        </div>
+        <p>
+          <button
+            class="btn btn-primary"
+            type="button"
+            data-toggle="collapse"
+            data-target="#teamMembers"
+            aria-expanded="false"
+            aria-controls="teamMembers"
+          >
+            Press to see team members and their contribution
+          </button>
+        </p>
+        <div class="collapse" id="teamMembers">
+          <div class="card card-body">
+            <div class="btn-group dropright">
+              <button type="button" class="btn btn-secondary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                Pieptea Gabriel
+              </button>
+              <div class="dropdown-menu">
+                <p>code writing, research</p>
+              </div>
+            </div>
+            <div class="btn-group dropright">
+              <button type="button" class="btn btn-secondary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                Andrei Georgiana
+              </button>
+              <div class="dropdown-menu">
+                <p>code writing, research</p>
+              </div>
+            </div>
+            <div class="btn-group dropright">
+              <button type="button" class="btn btn-secondary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                Toma Ioana
+              </button>
+              <div class="dropdown-menu">
+                <p>research</p>
+              </div>
+            </div>
+            <div class="btn-group dropright">
+              <button type="button" class="btn btn-secondary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                Serban Laura
+              </button>
+              <div class="dropdown-menu">
+                <p>research</p>
+              </div>
+            </div>
+            <div class="btn-group dropright">
+              <button type="button" class="btn btn-secondary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                Staicu Sandra
+              </button>
+              <div class="dropdown-menu">
+                <p>presentation</p>
+              </div>
+            </div>
+            <div class="btn-group dropright">
+              <button type="button" class="btn btn-secondary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                Al Ismael Hasan Esah
+              </button>
+              <div class="dropdown-menu">
+                <p>presentation</p>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
-
-    <div id="map">
-        
-    </div>
+    <script
+      src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
+      integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+      integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
+      integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
+      crossorigin="anonymous"
+    ></script>
+    <script src="containsFlight.js"></script>
     <script src="mapStyle.js"></script>
     <script src="svgImage.js"></script>
     <script src="flightSector.js"></script>
     <script src="airportList.js"></script>
     <script src="script.js"></script>
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC_goboEQ-2pDgXVWVQ4KJ0U9rDvBsVRPw&callback=initMap"
-    async defer></script>
+    <script
+      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC_goboEQ-2pDgXVWVQ4KJ0U9rDvBsVRPw&callback=initMap"
+      async
+      defer
+    ></script>
   </body>
 </html>
